# PresentQuick

./: LICENSE  README.md  main.py  presentation.pptx  pyproject.toml  slide1.pptx
templates/: index.html  tryitout.html
